{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 222,
  "lineage": "244da366-1324-4b98-66ad-e28c67c54022",
  "resources": [
    {
      "module": "module.compute_config.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-024b4021cb293d9a1",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024b4021cb293d9a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Client VPN to connect to EKS cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-021e010c38661ddce"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Lambda to connect to EKS cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a904b4eaeaf49ac0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-cluster",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.compute_config.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-0a904b4eaeaf49ac0",
            "description": "Security group for Lambda function that installs ArgoCD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic to download manifests",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic to EKS cluster endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024b4021cb293d9a1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0a904b4eaeaf49ac0",
            "ingress": [],
            "name": "eks-cluster-lambda-sg",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-lambda-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_config.module.eks.aws_security_group.cluster",
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.compute_config.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access",
            "from_port": 0,
            "id": "sgrule-1106687320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-024b4021cb293d9a1",
            "security_group_rule_id": "sgr-00e8988a14b661eab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_config.module.eks.aws_security_group.cluster",
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.compute_config.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_client_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Client VPN to connect to EKS cluster API",
            "from_port": 443,
            "id": "sgrule-4085222722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-024b4021cb293d9a1",
            "security_group_rule_id": "sgr-0fc9da0874fbcad96",
            "self": false,
            "source_security_group_id": "sg-021e010c38661ddce",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_config.module.eks.aws_security_group.cluster",
            "module.network_config.aws_acm_certificate.client_ca",
            "module.network_config.aws_acm_certificate.server",
            "module.network_config.aws_ec2_client_vpn_authorization_rule.this",
            "module.network_config.aws_ec2_client_vpn_endpoint.this",
            "module.network_config.aws_ec2_client_vpn_network_association.this",
            "module.network_config.aws_ec2_client_vpn_route.to_transit_gateway",
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.aws_ec2_transit_gateway_route.this",
            "module.network_config.aws_ec2_transit_gateway_route_table.this",
            "module.network_config.aws_ec2_transit_gateway_route_table_propagation.this",
            "module.network_config.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.network_config.aws_security_group.client_vpn",
            "module.network_config.aws_ssm_parameter.ca_cert",
            "module.network_config.aws_ssm_parameter.ca_key",
            "module.network_config.aws_ssm_parameter.client_cert",
            "module.network_config.aws_ssm_parameter.client_key",
            "module.network_config.module.routing.aws_route_table.this",
            "module.network_config.module.routing.aws_vpc_endpoint_route_table_association.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager",
            "module.network_config.tls_cert_request.client",
            "module.network_config.tls_cert_request.server",
            "module.network_config.tls_locally_signed_cert.client",
            "module.network_config.tls_locally_signed_cert.server",
            "module.network_config.tls_private_key.ca",
            "module.network_config.tls_private_key.client",
            "module.network_config.tls_private_key.server",
            "module.network_config.tls_self_signed_cert.ca"
          ]
        }
      ]
    },
    {
      "module": "module.compute_config.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to connect to EKS cluster API",
            "from_port": 443,
            "id": "sgrule-1221034790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-024b4021cb293d9a1",
            "security_group_rule_id": "sgr-06e593de5d3b75155",
            "self": false,
            "source_security_group_id": "sg-0a904b4eaeaf49ac0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute_config.module.eks.aws_security_group.cluster",
            "module.compute_config.module.eks.aws_security_group.lambda",
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.compute_config.module.lambda",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-002c6ba142942b21d",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002c6ba142942b21d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lambda-security-group",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-central-1:767398092878:transit-gateway/tgw-0495c89fbb4987b53",
            "association_default_route_table_id": "tgw-rtb-038843fc1d2f3eb59",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "disable",
            "description": "Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0495c89fbb4987b53",
            "multicast_support": "disable",
            "owner_id": "767398092878",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "transit-gateway"
            },
            "tags_all": {
              "Name": "transit-gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0eb2b4ae8eaaf8481_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-05970b01f6052185a",
            "transit_gateway_route_table_id": "tgw-rtb-0eb2b4ae8eaaf8481"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.aws_ec2_transit_gateway_route_table.this",
            "module.network_config.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:transit-gateway-route-table/tgw-rtb-0eb2b4ae8eaaf8481",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0eb2b4ae8eaaf8481",
            "tags": {
              "Name": "transit-gateway-route-table"
            },
            "tags_all": {
              "Name": "transit-gateway-route-table"
            },
            "transit_gateway_id": "tgw-0495c89fbb4987b53"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "transit-gateway-attachment-egress",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0eb2b4ae8eaaf8481_tgw-attach-05970b01f6052185a",
            "resource_id": "vpc-002d8769ef29aa6fc",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-05970b01f6052185a",
            "transit_gateway_route_table_id": "tgw-rtb-0eb2b4ae8eaaf8481"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.aws_ec2_transit_gateway_route_table.this",
            "module.network_config.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        },
        {
          "index_key": "transit-gateway-attachment-main",
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0eb2b4ae8eaaf8481_tgw-attach-06e59765fc5a3cbf6",
            "resource_id": "vpc-0a80f3578ae6fa27b",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-06e59765fc5a3cbf6",
            "transit_gateway_route_table_id": "tgw-rtb-0eb2b4ae8eaaf8481"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.aws_ec2_transit_gateway_route_table.this",
            "module.network_config.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "arn": "arn:aws:ec2:eu-central-1:767398092878:transit-gateway-attachment/tgw-attach-05970b01f6052185a",
            "dns_support": "enable",
            "id": "tgw-attach-05970b01f6052185a",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0422dc6f1639ce3c4",
              "subnet-06b65e06b0481a313",
              "subnet-0be281a4e777c980b"
            ],
            "tags": {
              "Name": "transit-gateway-attachment-egress"
            },
            "tags_all": {
              "Name": "transit-gateway-attachment-egress"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0495c89fbb4987b53",
            "vpc_id": "vpc-002d8769ef29aa6fc",
            "vpc_owner_id": "767398092878"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "arn": "arn:aws:ec2:eu-central-1:767398092878:transit-gateway-attachment/tgw-attach-06e59765fc5a3cbf6",
            "dns_support": "enable",
            "id": "tgw-attach-06e59765fc5a3cbf6",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-05035b7c912b6a715",
              "subnet-05882cfce013b8c6f",
              "subnet-09f53e122fd8a0cc0"
            ],
            "tags": {
              "Name": "transit-gateway-attachment-main"
            },
            "tags_all": {
              "Name": "transit-gateway-attachment-main"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0495c89fbb4987b53",
            "vpc_id": "vpc-0a80f3578ae6fa27b",
            "vpc_owner_id": "767398092878"
          },
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-021e010c38661ddce",
            "description": "Security group for Client VPN endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021e010c38661ddce",
            "ingress": [],
            "name": "client-vpn-endpoint-sg",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "client-vpn-endpoint-sg"
            },
            "tags_all": {
              "Name": "client-vpn-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"egress-public-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0614e9312b3b24bd2",
            "id": "rtb-0614e9312b3b24bd2",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e892b14446558f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "egress-public-1"
            },
            "tags_all": {
              "Name": "egress-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"egress-public-2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0c2abd050067c2a9e",
            "id": "rtb-0c2abd050067c2a9e",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e892b14446558f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "egress-public-2"
            },
            "tags_all": {
              "Name": "egress-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"egress-public-3\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-04f028704af6d4798",
            "id": "rtb-04f028704af6d4798",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e892b14446558f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "egress-public-3"
            },
            "tags_all": {
              "Name": "egress-public-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-control-plane-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0b1a449295973ac3a",
            "id": "rtb-0b1a449295973ac3a",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-control-plane-1"
            },
            "tags_all": {
              "Name": "main-control-plane-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-control-plane-2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0561074847c309264",
            "id": "rtb-0561074847c309264",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-control-plane-2"
            },
            "tags_all": {
              "Name": "main-control-plane-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-control-plane-3\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0c5abc1601f683f9e",
            "id": "rtb-0c5abc1601f683f9e",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-control-plane-3"
            },
            "tags_all": {
              "Name": "main-control-plane-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-data-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0848d24b822a71d51",
            "id": "rtb-0848d24b822a71d51",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-data-1"
            },
            "tags_all": {
              "Name": "main-data-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-data-2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0191387012170e39a",
            "id": "rtb-0191387012170e39a",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-data-2"
            },
            "tags_all": {
              "Name": "main-data-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-data-3\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0b51a137acf9e93da",
            "id": "rtb-0b51a137acf9e93da",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-data-3"
            },
            "tags_all": {
              "Name": "main-data-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-services-1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0d59efe7617705244",
            "id": "rtb-0d59efe7617705244",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0495c89fbb4987b53",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-services-1"
            },
            "tags_all": {
              "Name": "main-services-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-services-2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-0b75e7110c6dbbd88",
            "id": "rtb-0b75e7110c6dbbd88",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0495c89fbb4987b53",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-services-2"
            },
            "tags_all": {
              "Name": "main-services-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.routing[\"main-services-3\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:route-table/rtb-09aaa131b408c3041",
            "id": "rtb-09aaa131b408c3041",
            "owner_id": "767398092878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0495c89fbb4987b53",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-services-3"
            },
            "tags_all": {
              "Name": "main-services-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.aws_ec2_transit_gateway.this",
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_nat_gateway.this",
            "module.network_config.module.vpc.aws_security_group.allow_kms",
            "module.network_config.module.vpc.aws_security_group.allow_secretsmanager",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options.this",
            "module.network_config.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network_config.module.vpc.aws_vpc_endpoint.kms",
            "module.network_config.module.vpc.aws_vpc_endpoint.s3",
            "module.network_config.module.vpc.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e073d1b96a5e72",
            "arn": "arn:aws:ec2:eu-central-1:767398092878:elastic-ip/eipalloc-001e073d1b96a5e72",
            "association_id": "eipassoc-092e1de5df3474318",
            "domain": "vpc",
            "id": "eipalloc-001e073d1b96a5e72",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-00736b14020f7b0b7",
            "private_dns": "ip-10-0-11-189.eu-central-1.compute.internal",
            "private_ip": "10.0.11.189",
            "public_dns": "ec2-3-69-117-43.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.117.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "egress-nat-eip"
            },
            "tags_all": {
              "Name": "egress-nat-eip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027c0123edb177332",
            "arn": "arn:aws:ec2:eu-central-1:767398092878:elastic-ip/eipalloc-027c0123edb177332",
            "association_id": "eipassoc-0ce3caf6018cc97d0",
            "domain": "vpc",
            "id": "eipalloc-027c0123edb177332",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-096c7d1c08d735985",
            "private_dns": "ip-10-0-12-52.eu-central-1.compute.internal",
            "private_ip": "10.0.12.52",
            "public_dns": "ec2-3-78-3-240.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.3.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "egress-nat-eip"
            },
            "tags_all": {
              "Name": "egress-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:internet-gateway/igw-04e892b14446558f7",
            "id": "igw-04e892b14446558f7",
            "owner_id": "767398092878",
            "tags": {
              "Name": "egress-igw"
            },
            "tags_all": {
              "Name": "egress-igw"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e073d1b96a5e72",
            "association_id": "eipassoc-092e1de5df3474318",
            "connectivity_type": "public",
            "id": "nat-08099695d9966f84d",
            "network_interface_id": "eni-00736b14020f7b0b7",
            "private_ip": "10.0.11.189",
            "public_ip": "3.69.117.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0422dc6f1639ce3c4",
            "tags": {
              "Name": "egress-nat"
            },
            "tags_all": {
              "Name": "egress-nat"
            }
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027c0123edb177332",
            "association_id": "eipassoc-0ce3caf6018cc97d0",
            "connectivity_type": "public",
            "id": "nat-06f9a6b316afff505",
            "network_interface_id": "eni-096c7d1c08d735985",
            "private_ip": "10.0.12.52",
            "public_ip": "3.78.3.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be281a4e777c980b",
            "tags": {
              "Name": "egress-nat"
            },
            "tags_all": {
              "Name": "egress-nat"
            }
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_eip.nat",
            "module.network_config.module.vpc.aws_internet_gateway.this",
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-0609d0a468d321e26",
            "description": "Allow KMS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0609d0a468d321e26",
            "ingress": [],
            "name": "allow-kms",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_kms"
            },
            "tags_all": {
              "Name": "allow_kms"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-043512b8f5ca9ebf1",
            "description": "Allow Secrets Manager traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043512b8f5ca9ebf1",
            "ingress": [],
            "name": "allow-secretsmanager",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_secretsmanager"
            },
            "tags_all": {
              "Name": "allow_secretsmanager"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-0422dc6f1639ce3c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422dc6f1639ce3c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-nat-1"
            },
            "tags_all": {
              "Name": "egress-nat-1"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "nat-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-0be281a4e777c980b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be281a4e777c980b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-nat-2"
            },
            "tags_all": {
              "Name": "egress-nat-2"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "nat-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-06b65e06b0481a313",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b65e06b0481a313",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-nat-3"
            },
            "tags_all": {
              "Name": "egress-nat-3"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-08020616759072318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08020616759072318",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-public-1"
            },
            "tags_all": {
              "Name": "egress-public-1"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-02e1e393ab3fce5b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e1e393ab3fce5b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-public-2"
            },
            "tags_all": {
              "Name": "egress-public-2"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-0f3eff79d762934b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3eff79d762934b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "egress-public-3"
            },
            "tags_all": {
              "Name": "egress-public-3"
            },
            "vpc_id": "vpc-002d8769ef29aa6fc"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"egress\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:vpc/vpc-002d8769ef29aa6fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017d7dc9d715516b4",
            "default_route_table_id": "rtb-0f465c00c0bd0cbce",
            "default_security_group_id": "sg-0b35f07465681233b",
            "dhcp_options_id": "dopt-0b23cfa554063b8b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002d8769ef29aa6fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f465c00c0bd0cbce",
            "owner_id": "767398092878",
            "tags": {
              "Name": "egress"
            },
            "tags_all": {
              "Name": "egress"
            }
          }
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-059f6ab225ce57757",
            "description": "Allow KMS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059f6ab225ce57757",
            "ingress": [],
            "name": "allow-kms",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_kms"
            },
            "tags_all": {
              "Name": "allow_kms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:security-group/sg-02e9eb318dffdb3bf",
            "description": "Allow Secrets Manager traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e9eb318dffdb3bf",
            "ingress": [],
            "name": "allow-secretsmanager",
            "name_prefix": "",
            "owner_id": "767398092878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_secretsmanager"
            },
            "tags_all": {
              "Name": "allow_secretsmanager"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.module.vpc.aws_subnet.this",
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "control-plane-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-0b55a1d7fa2b89ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55a1d7fa2b89ae0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-control-plane-1"
            },
            "tags_all": {
              "Name": "main-control-plane-1"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "control-plane-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-05ca167d3e66c3eb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ca167d3e66c3eb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-control-plane-2"
            },
            "tags_all": {
              "Name": "main-control-plane-2"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "control-plane-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-06d5eab049583dda0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.1.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d5eab049583dda0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-control-plane-3"
            },
            "tags_all": {
              "Name": "main-control-plane-3"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "data-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-09e6b1437f574edc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e6b1437f574edc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-data-1"
            },
            "tags_all": {
              "Name": "main-data-1"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "data-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-0f9857a7f46322b87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9857a7f46322b87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-data-2"
            },
            "tags_all": {
              "Name": "main-data-2"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "data-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-069252a5913ce3828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.1.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069252a5913ce3828",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-data-3"
            },
            "tags_all": {
              "Name": "main-data-3"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "services-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-09f53e122fd8a0cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f53e122fd8a0cc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-services-1"
            },
            "tags_all": {
              "Name": "main-services-1"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "services-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-05035b7c912b6a715",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05035b7c912b6a715",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-services-2"
            },
            "tags_all": {
              "Name": "main-services-2"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "services-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:subnet/subnet-05882cfce013b8c6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05882cfce013b8c6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398092878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-services-3"
            },
            "tags_all": {
              "Name": "main-services-3"
            },
            "vpc_id": "vpc-0a80f3578ae6fa27b"
          },
          "dependencies": [
            "module.network_config.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_config.module.vpc[\"main\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:767398092878:vpc/vpc-0a80f3578ae6fa27b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08865cc653da48dd6",
            "default_route_table_id": "rtb-01a13b5483edf53df",
            "default_security_group_id": "sg-0b902d8bdf516a0e7",
            "dhcp_options_id": "dopt-045ef68297c1bf634",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a80f3578ae6fa27b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a13b5483edf53df",
            "owner_id": "767398092878",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}